Bug 394966 - Session 'Primary Workspace Follows Focus' doesn't activate till reselecting the session.
Summary: Session 'Primary Workspace Follows Focus' doesn't activate till reselecting t...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: joupent
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-02 20:15 UTC by wolthera
Modified: 2018-06-26 15:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2018-06-02 20:15:49 UTC
When making a new session and toggling "Primary Workspace Follows Focus", the primary workspace does not change windows until reselecting the just created session from the list.

This is a bit unexpected, especially as it's cousin "Show Active Image In All Windows" does work after having just created a session with that active.
Comment 1 Halla Rempt 2018-06-02 20:17:04 UTC
Jouni, please take a look?
Comment 2 joupent 2018-06-06 12:10:45 UTC
Git commit 15efb84238ae9412a13084d9c530f2d00ad25dcb by Jouni Pentikäinen.
Committed on 06/06/2018 at 12:10.
Pushed by jounip into branch 'master'.

Fix "primary workspace follows focus" activation when creating window layout

M  +1    -0    libs/ui/widgets/kis_workspace_chooser.cpp

https://commits.kde.org/krita/15efb84238ae9412a13084d9c530f2d00ad25dcb
Comment 3 Andrey 2018-06-26 15:02:23 UTC
Git commit 0b83f3a1368deaede1aeb75db0df4a380049a4b1 by Andrey Kamakin, on behalf of Jouni Pentikäinen.
Committed on 26/06/2018 at 14:18.
Pushed by akamakin into branch 'akamakin/T8628-multithreading-optimization'.

Fix "primary workspace follows focus" activation when creating window layout

M  +1    -0    libs/ui/widgets/kis_workspace_chooser.cpp

https://commits.kde.org/krita/0b83f3a1368deaede1aeb75db0df4a380049a4b1