Fix "primary workspace follows focus" activation when creating window layout

BUG: 394966